use getConstructor().newInstance() see http://errorprone.info/bugpattern/ClassNewInstance